# pypi-rest-requests

./: README.md  pyproject.toml
src/rest_requests/: __about__.py  __init__.py
tests/: test_all.py
